# gettsim-personas

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  codecov.yml  create_persona_templates.ipynb  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  enhancement.md  question.md
.github/workflows/: main.yaml  main.yml
sandbox/: playground.ipynb  tutorial.ipynb
src/_gettsim_personas/: persona_elements.py  persona_objects.py  typing.py  upsert.py  utils.py
src/_gettsim_personas/de/einkommensteuer_sozialabgaben/: __init__.py  couple_1_child.py
src/_gettsim_personas/de/gesetzliche_altersrente/: __init__.py  couple.py  couple_with_fixed_public_pension.py  single.py  single_with_fixed_public_pension.py
src/_gettsim_personas/de/grundsicherung_für_erwerbsfähige/: __init__.py  _couple_1_child_in_karenzzeit.py  couple_1_child.py  couple_1_child_in_karenzzeit.py  couple_2_children.py  couple_no_children.py  single.py  single_1_child.py  single_adult.py
src/_gettsim_personas/de/grundsicherung_im_alter/: __init__.py  couple_1_child.py  couple_no_child.py  single_1_child.py  single_no_child.py
src/_personas_for_testing/de/: test_call_gettsim_on_personas.py  test_validity_of_persona_definitions.py
src/gettsim_personas/: __init__.py  active_personas.py  broadcasting.py  config.py  get_personas.py  interface.py  linspace_grids.py  load_personas.py  orig_persona_objects.py  orig_personas.py  persona_elements.py  persona_objects.py  typing.py  upsert.py  utils.py
src/gettsim_personas/de/: __init__.py
src/gettsim_personas/de/einkommensteuer_sozialabgaben/: _couple_1_child.py
src/gettsim_personas/de/grundsicherung_für_erwerbsfähige/: _couple_1_child_in_karenzzeit.py
src/gettsim_personas/einkommensteuer_sozialabgaben/: __init__.py
src/gettsim_personas/gesetzliche_altersrente/: __init__.py
src/gettsim_personas/grundsicherung_für_erwerbsfähige/: __init__.py
src/gettsim_personas/grundsicherung_im_alter/: __init__.py
src/gettsim_personas/personas/: __init__.py  _validate_p_ids_hook.py  couple_1_child_no_transfers.yaml  personas-schema.json
src/gettsim_personas/personas/einkommensteuer_sozialabgaben/: __init__.py  _couple_1_child.py  couple_1_child.py  couple_1_child.yaml
src/gettsim_personas/personas/einkommensteuer_sozialabgaben/couple_1_child_no_means_tested_transfers/: couple_1_child.yaml
src/gettsim_personas/personas/grundsicherung_für_erwerbsfähige/: __init__.py  _couple_1_child.py  _couple_1_child_in_karenzzeit.py  couple_1_child.py
src/gettsim_personas/personas/grundsicherung_für_erwerbsfähige/in_karenzzeit/: couple_1_child.py
src/gettsim_personas/personas/middle-class-households/couple_1_child/: couple_1_child_until_2020.yaml  couple_1_child_until_2021.yaml
src/gettsim_personas/personas/middle-class-households/couple_1_child_no_means_tested_transfers/: couple_1_child_since_2021.yaml  couple_1_child_until_2020.yaml  couple_1_child_until_2021.yaml
tests/: test_broadcasting.py  test_call_gettsim_on_personas.py  test_end_to_end.py  test_get_personas.py  test_persona_elements.py  test_persona_format.py  test_persona_objects.py  test_upsert_input_data.py  test_validity_of_persona_definitions.py
tests/de/: all_personas.py  test_call_gettsim_on_personas.py  test_validity_of_persona_definitions.py
tests/de_personas/: all_personas.py  test_call_gettsim_on_personas.py  test_validity_of_persona_definitions.py
tests/infrastructure/: test_persona_elements.py  test_persona_objects.py  test_upsert_input_data.py
tests/personas_for_testing/: __init__.py  persona_elements.py  persona_elements_with_invalid_length_of_input_data.py  persona_elements_with_overlapping_dates.py
tests/test_persona/: persona.py  persona_specs.py
