# ======================================================================================
# Project metadata
# ======================================================================================

[project]
name = "gettsim_personas"
description = "Personas to use as example inputs for GETTSIM."
requires-python = ">=3.11"
#dependencies = ["gettsim>=1.0a2"]
dynamic = ["version"]
keywords = [
    "Economics",
    "Taxes",
    "Benefits",
    "Transfers",
    "Pensions",
    "Germany",
    "GETTSIM",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
# About the project
authors = [
    { name = "Hans-Martin von Gaudecker", email = "hmgaudecker@uni-bonn.de" },
    { name = "Marvin Immesberger", email = "immesberger@uni-bonn.de" },
]
maintainers = [
    { name = "Hans-Martin von Gaudecker", email = "hmgaudecker@uni-bonn.de" },
    { name = "Marvin Immesberger", email = "immesberger@uni-bonn.de" },
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "GNU Affero General Public License v3"

[project.urls]
Changelog = "https://github.com/ttsim-dev/gettsim-personas"
Documentation = "https://github.com/ttsim-dev/gettsim-personas"
Github = "https://github.com/ttsim-dev/gettsim-personas"
Tracker = "https://github.com/ttsim-dev/gettsim-personas/issues"

# ======================================================================================
# Build system configuration
# ======================================================================================

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.vcs]
version-file = "src/gettsim_personas/_version.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]
only-packages = true

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

# ======================================================================================
# Pixi configuration
# ======================================================================================

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.11,<3.14"
jupyterlab = "*"
pre-commit = "*"
pygraphviz = "*"

[tool.pixi.pypi-dependencies]
gettsim_personas = {path = ".", editable = true}
ttsim-backend = {git="https://github.com/ttsim-dev/ttsim", branch="main"}
gettsim = {git="https://github.com/ttsim-dev/gettsim", branch="main"}
kaleido = ">=1.0.0"
pdbp = "*"
pytest-cov = "*"


# Features
# --------------------------------------------------------------------------------------

[tool.pixi.feature.py311.dependencies]
python = "~=3.11"

[tool.pixi.feature.py312.dependencies]
python = "~=3.12"

[tool.pixi.feature.py313.dependencies]
python = "~=3.13"

[tool.pixi.feature.ty.pypi-dependencies]
ty = "*"
types-PyYAML = "*"
types-pytz = "*"


# Tasks
# --------------------------------------------------------------------------------------

[tool.pixi.feature.test.tasks]
tests = "pytest"

[tool.pixi.feature.test.pypi-dependencies]
pytest-cov = "*"

[tool.pixi.feature.ty.tasks]
ty = "ty check"

# Environments
# --------------------------------------------------------------------------------------

[tool.pixi.environments]
ty = ["ty"]
py311 = ["test", "py311"]
py312 = ["test", "py312"]
py313 = ["test", "py313"]

# ======================================================================================
# Ruff configuration
# ======================================================================================

[tool.ruff]
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    "ANN",  # Missing type annotations
    "COM812", # Conflict with ruff-format
    "D10",  # Missing docstrings
    "ISC001", # Conflict with ruff-format
    "PLR0913",  # Too many arguments in function definition
    "RET504", # Don't force to calculate upon return
    "S101",  # Use of `assert` detected.
    "S301",  # pickle module is unsafe
    "PLC2403", # Modules may contain non-ASCII characters
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "PD011", "PLR2004", "C408"]
"src/_gettsim_personas/de/*" = ["E501", "PLC2401"]
"sandbox/tutorial.ipynb" = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"


# ======================================================================================
# ty configuration
# ======================================================================================

[tool.ty.rules]
invalid-return-type = "error"
ambiguous-protocol-member = "error"
deprecated = "error"
division-by-zero = "error"
ignore-comment-unknown-rule = "error"
invalid-argument-type = "error"
invalid-ignore-comment = "error"
possibly-missing-attribute = "error"
possibly-missing-implicit-call = "error"
possibly-missing-import = "error"
possibly-unresolved-reference = "error"
redundant-cast = "error"
undefined-reveal = "error"
unresolved-global = "error"
unsupported-base = "error"
unused-ignore-comment = "error"
useless-overload-body = "error"


# ======================================================================================
# Miscellaneous tools configuration
# ======================================================================================


[tool.pytest.ini_options]
addopts = "--pdbcls=pdbp:Pdb"

[tool.yamlfix]
line_length = 88
none_representation = "null"
