[build-system]
build-backend = "hatchling.build"
requires = [ "hatch-vcs", "hatchling" ]

[project]
name = "gettsim-personas"
description = "Personas to use as example inputs for GETTSIM."
keywords = [
  "Benefits",
  "Economics",
  "Germany",
  "GETTSIM",
  "Pensions",
  "Taxes",
  "Transfers",
]
requires-python = ">=3.11"
classifiers = [
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  # "gettsim>=1"
]
[[project.authors]]
name = "Hans-Martin von Gaudecker"
email = "hmgaudecker@uni-bonn.de"
[[project.authors]]
name = "Marvin Immesberger"
email = "immesberger@uni-bonn.de"
[project.license]
text = "GNU Affero General Public License v3"
[[project.maintainers]]
name = "Hans-Martin von Gaudecker"
email = "hmgaudecker@uni-bonn.de"
[[project.maintainers]]
name = "Marvin Immesberger"
email = "immesberger@uni-bonn.de"
[project.readme]
content-type = "text/markdown"
file = "README.md"
[project.urls]
Changelog = "https://github.com/ttsim-dev/gettsim-personas"
Documentation = "https://github.com/ttsim-dev/gettsim-personas"
Github = "https://github.com/ttsim-dev/gettsim-personas"
Tracker = "https://github.com/ttsim-dev/gettsim-personas/issues"

[tool.hatch]
build.hooks.vcs.version-file = "src/gettsim_personas/_version.py"
build.targets.sdist.exclude = [ "tests" ]
build.targets.sdist.only-packages = true
build.targets.wheel.only-include = [ "src" ]
build.targets.wheel.sources = [ "src" ]
metadata.allow-direct-references = true
version.source = "vcs"

[tool.ruff]
target-version = "py311"
fix = true
unsafe-fixes = false
[tool.ruff.lint]
select = [ "ALL" ]
extend-ignore = [
  "ANN",     # Missing type annotations
  "COM812",  # Conflict with ruff-format
  "D10",     # Missing docstrings
  "ISC001",  # Conflict with ruff-format
  "PLC2403", # Modules may contain non-ASCII characters
  "PLR0913", # Too many arguments in function definition
  "RET504",  # Don't force to calculate upon return
  "S101",    # Use of `assert` detected.
  "S301",    # pickle module is unsafe
  "TC001",   # Move application import into a type-checking block
  "TC002",   # Move third-party import into a type-checking block
  "TC003",   # Move standard library import into a type-checking block
]
per-file-ignores."sandbox/tutorial.ipynb" = [ "E501" ]
per-file-ignores."src/_gettsim_personas/de/*" = [ "E501", "PLC2401" ]
per-file-ignores."tests/*" = [ "C408", "D", "PD011", "PLR2004" ]
pydocstyle.convention = "google"

[tool.pyproject-fmt]
column_width = 88
max_supported_python = "3.14"
table_format = "long"
collapse_tables = [ "tool.hatch" ]

[tool.pytest.ini_options]
addopts = [ "--pdbcls=pdbp:Pdb" ]

[tool.ty.rules]
invalid-return-type = "ignore"
ambiguous-protocol-member = "error"
deprecated = "error"
division-by-zero = "error"
ignore-comment-unknown-rule = "error"
invalid-argument-type = "error"
invalid-ignore-comment = "error"
possibly-missing-attribute = "error"
possibly-missing-implicit-call = "error"
possibly-missing-import = "error"
possibly-unresolved-reference = "error"
redundant-cast = "error"
undefined-reveal = "error"
unresolved-global = "error"
unsupported-base = "error"
unused-ignore-comment = "error"
useless-overload-body = "error"

[tool.pixi.dependencies]
jupyterlab = "*"
prek = "*"
pygraphviz = "*"
[tool.pixi.environments]
py311 = [ "tests", "py311" ]
py312 = [ "tests", "py312" ]
py313 = [ "tests", "py313" ]
py314 = [ "tests", "py314" ]
[tool.pixi.feature.py311.dependencies]
python = "~=3.11.0"
[tool.pixi.feature.py312.dependencies]
python = "~=3.12.0"
[tool.pixi.feature.py313.dependencies]
python = "~=3.13.0"
[tool.pixi.feature.py314.dependencies]
python = "~=3.14.0"
[tool.pixi.feature.tests.pypi-dependencies]
ty = ">=0.0.9"
types-PyYAML = "*"
types-pytz = "*"
pytest-cov = "*"
pytest-xdist = "*"
[tool.pixi.feature.tests.tasks]
ty = "ty check"
tests = "pytest"
[tool.pixi.pypi-dependencies]
gettsim_personas = { path = ".", editable = true }
ttsim-backend = { git = "https://github.com/ttsim-dev/ttsim", branch = "main" }
gettsim = { git = "https://github.com/ttsim-dev/gettsim", branch = "boilerplate-x" }
kaleido = ">=1.0.0"
pdbp = "*"
[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "linux-64", "osx-64", "osx-arm64", "win-64" ]

[tool.yamlfix]
line_length = 88
sequence_style = "block_style"
none_representation = "null"
